crates/atlas-runtime/tests/snapshots/assignment_target_modern__compound_div_assign.snap
---
source: crates/atlas-runtime/tests/assignment_target_modern.rs
expression: "program.items[0]"
---
Statement:
  CompoundAssign:
    target:
      Name:
        name: x
        span:
          start: 0
          end: 1
    op: DivAssign
    value:
      Literal:
        - Number: 4
        - start: 5
          end: 6
    span:
      start: 0
      end: 7
