crates/atlas-runtime/tests/snapshots/assignment_target_modern__compound_mul_assign.snap
---
source: crates/atlas-runtime/tests/assignment_target_modern.rs
expression: "program.items[0]"
---
Statement:
  CompoundAssign:
    target:
      Name:
        name: x
        span:
          start: 0
          end: 1
    op: MulAssign
    value:
      Literal:
        - Number: 2
        - start: 5
          end: 6
    span:
      start: 0
      end: 7
