crates/atlas-runtime/tests/snapshots/assignment_target_modern__incdec_increment_name.snap
---
source: crates/atlas-runtime/tests/assignment_target_modern.rs
expression: "program.items[0]"
---
Statement:
  Increment:
    target:
      Name:
        name: x
        span:
          start: 0
          end: 1
    span:
      start: 0
      end: 4
